its close enough, gets the functionality done without having a permine t state saved for read material. Thiss can be changed in the future but will probabliy not be done in tim for the demo
also the code is not clean, winter break problem

--- a/frontend/src/styles/notification.css
+++ b/frontend/src/styles/notification.css
@@ -72,3 +72,13 @@
 .btn-reject:hover {
   background-color: #c82333;
 }
+
+.approved-text {
+  color: green;
+  font-weight: bold;
+}
+
+.rejected-text {
+  color: red;
+  font-weight: bold;
+}
